<resources>
    <string name="app_name">Taulukontrolleri</string>
    <string name="settings_screen">Taulun asetukset</string>

    <string name="header_target_position">Taulun asento</string>
    <string name="target_visible">Näkyvissä</string>
    <string name="target_invisible">Piilossa</string>

    <string name="header_firing_sequences">Ampumaohjelmat</string>

    <string name="button_test">Kokeile</string>
    <string name="button_save">Tallenna</string>
    <string name="button_connect">Yhdistä tauluun</string>
    <string name="button_disconnect">Katkaise yhteys</string>
    <string name="button_start_shooting">Aloita ammunta</string>
    <string name="button_start_load">Aloita lataaminen</string>
    <string name="button_start_sequence">Aloita</string>
    <string name="button_show_target">Näytä taulut</string>

    <string name="tick">&gt;</string>
    <string name="open_bluetooth_error">Bluetooth pitää olla päällä. Käynnistä sovellus uudelleen.</string>
    <string name="bluetooth_connected">Yhdistetty tauluun</string>
    <string name="bluetooth_connection_failed">Yhdistäminen tauluun epäonnistui. Käynnistä taulu ja sovellus uudelleen ja parita taulu uudelleen tarvittaessa.</string>
    <string name="bluetooth_no_device">Taulua ei löytynyt. Parita laite taulun HC-06 kanssa uudelleen.</string>

    <string name="title_activity_shooting">ShootingActivity</string>
    <string name="shooting_load">Lataa</string>
    <string name="shooting_prepare">Huomio</string>
    <string name="shooting_firing">Ammunta</string>

    <string name="message_doubleclick_to_exit">Paina takaisin-nappia uudelleen poistuaksesi ammunnasta</string>

</resources>
