<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.db0.targetcontroller.SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/target_visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/slider_height"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/seekbar_tick_visible"
            android:layout_width="@dimen/seekbar_tick_width"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tick"
            android:visibility="gone"
            tools:visibility="visible" />

        <SeekBar
            android:id="@+id/seekbar_visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/seekbar_tick_width"
            android:layout_marginRight="@dimen/seekbar_value_width"
            android:max="180" />

        <TextView
            android:id="@+id/seekbar_value_visible"
            android:layout_width="@dimen/seekbar_value_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="0" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/target_invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/slider_height"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/seekbar_tick_hidden"
            android:layout_width="@dimen/seekbar_tick_width"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tick"
            android:visibility="gone"
            tools:visibility="visible" />

        <SeekBar
            android:id="@+id/seekbar_hidden"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/seekbar_tick_width"
            android:layout_marginRight="@dimen/seekbar_value_width"
            android:max="180" />

        <TextView
            android:id="@+id/seekbar_value_hidden"
            android:layout_width="@dimen/seekbar_value_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="0" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="testClick"
            android:text="@string/button_test" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveClick"
            android:text="@string/button_save" />
    </LinearLayout>
</LinearLayout>
